Fixed the horizontal scroll thing
Holy F*** !!!! it was 100vw instead of 100% that was messing around

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,9 +8,16 @@ and open the template in the editor.
     Author     : Ninja
 */
 
+header {
+/*        width: 100vw;
+        height: 100vw;*/
+        margin: 0;
+        padding: 0;
+}
+
 #bg_image {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url('https://static.pexels.com/photos/4439/city-art-graffiti-wall.jpg');
     background-position: center;
@@ -39,12 +46,6 @@ and open the template in the editor.
     position: relative;
     padding: 0;
     margin: 0;
-}
-
-header {
-/*        width: 100vw;
-        height: 100vw;*/
-
 }
 
 #trending {
